# summit_x_with_ros_and_gazebo

./: README.md
robotnik_sensors/urdf/: axis_m5013.urdf.xacro  gps.urdf.xacro  hokuyo_ust10lx.urdf.xacro  imu_hector_plugin.urdf.xacro
summit-xl-part2/summit_xl_localization/src/: navsat_transform_new.cpp
summit-xl-part2/summit_xl_navigation/config/: base_local_planner_params.yaml~  costmap_common_params.yaml  global_costmap_params_map.yaml~  local_costmap_params.yaml~
summit-xl-part2/summit_xl_navigation/launch/: move_base_map.launch   move_base_nomap.launch~  move_base_world.launch  summit_xl_gmapping.launch
summit-xl-part2/summit_xl_navigation/launch/navigation_amcl/: amcl.launch~  amcl_original.launch   move_base_amcl.launch
summit_x_common-indigo-devel/: README.md
summit_x_common-indigo-devel/summit_x_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
summit_x_common-indigo-devel/summit_x_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
summit_x_common-indigo-devel/summit_x_description/config/: summit_x.rviz  summit_x1.rviz~
summit_x_common-indigo-devel/summit_x_description/launch/: summit_x_rviz.launch~  summit_x_state_robot.launch
summit_x_common-indigo-devel/summit_x_description/robots/: summit_x.urdf.xacro  summit_x_rubber.urdf.xacro
summit_x_common-indigo-devel/summit_x_description/urdf/bases/: summit_x_base.gazebo.xacro~  summit_x_base.urdf.xacro
summit_x_common-indigo-devel/summit_x_description/urdf/wheels/: omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
summit_x_robot-indigo-devel/: README.md
summit_x_robot-indigo-devel/summit_x_bringup/: CMakeLists.txt  package.xml
summit_x_robot-indigo-devel/summit_x_bringup/config/: summit_x_controller.yaml
summit_x_robot-indigo-devel/summit_x_bringup/config/px4/: px4_pluginlists.yaml
summit_x_robot-indigo-devel/summit_x_bringup/launch/: hokuyo_laser.launch  imu.launch  px4.launch  summit_x_bringup.launch  summit_x_controller.launch  summit_x_pad.launch
summit_x_sim-indigo-devel/summit_x_control/config/: summit_x_control.yaml
summit_x_sim-indigo-devel/summit_x_control/launch/: summit_x_control.launch
summit_x_sim-indigo-devel/summit_x_gazebo/launch/: summit_x.launch
summit_x_sim-indigo-devel/summit_x_gazebo/worlds/: summit_x_world  world1.world~
summit_x_sim-indigo-devel/summit_x_robot_control/config/: summit_x.yaml~
summit_x_sim-indigo-devel/summit_x_robot_control/launch/: summit_x_robot_control.launch~
summit_x_sim-indigo-devel/summit_x_sim_bringup/launch/: summit_x_complete.launch~
teleop_twist_keyboard-master/: teleop_twist_keyboard.py~
