<?xml version="1.0"?>
<package>
  <name>summit_x_description</name>
  <version>0.0.4</version>
  <description>The summit_x_description package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/RobotnikAutomation/summit_x_description</url> 
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>



  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
